--- a/order/index.html
+++ b/order/index.html
@@ -10,10 +10,23 @@
     .selectable-item {border:1px solid #ccc;padding:10px;margin-bottom:8px;border-radius:6px;cursor:pointer;transition:background 0.15s;}
     .selectable-item.selected {background:#b22222;color:#fff;font-weight:bold;}
     #cartItems {border:1px solid #bbb;padding:10px;border-radius:8px;margin-top:10px;}
-    .cart-row {display:flex;justify-content:space-between;align-items:center;margin-bottom:6px;gap: 6px;}
+    .cart-row {display:flex;justify-content:space-between;align-items:center;margin-bottom:6px;gap:8px;}
     .cart-row .delete-btn {padding:2px 7px;color:#fff;background:#b22222;border:none;border-radius:3px;}
     .cart-total {font-weight:bold; margin-top:8px;}
     .hidden {display:none;}
+    #floatingStatus {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #b22222;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      font-weight: bold;
+      z-index: 999;
+      transition: opacity 0.3s;
+    }
   </style>
 </head>
 <body>
@@ -23,8 +36,8 @@
       <label for="name">Full Name:</label>
       <input type="text" id="name" name="name" required>
 
-      <label for="mobile">Mobile Number (+63...):</label>
-      <input type="tel" id="mobile" name="mobile" pattern="\\+63[0-9]{10}" placeholder="+639123456789" required>
+      <label for="mobile">Mobile Number:</label>
+      <input type="tel" id="mobile" name="mobile" required>
 
       <label for="orderType">Order Type:</label>
       <select id="orderType" name="orderType" onchange="togglePersons()" required>
@@ -74,175 +87,79 @@
     </div>
   </div>
 
-<script>
-const menuItems = {
-  pork: [
-    { name: "Pork Sisig", price: 199 },
-    { name: "Lechon Kawali", price: 229 },
-    { name: "Pork BBQ (2 sticks)", price: 120 }
-  ],
-  chicken: [
-    { name: "Fried Chicken", price: 179 },
-    { name: "Buffalo Wings", price: 189 },
-    { name: "Grilled Chicken", price: 199 }
-  ],
-  vegetable: [
-    { name: "Chopsuey", price: 159 },
-    { name: "Pinakbet", price: 149 },
-    { name: "Ginataang Gulay", price: 169 }
-  ],
-  noodles: [
-    { name: "Pancit Canton", price: 139 },
-    { name: "Bam-i", price: 149 },
-    { name: "Sotanghon Guisado", price: 139 }
-  ],
-  rice: [
-    { name: "Cup Rice", price: 25 },
-    { name: "Platter Rice", price: 100 },
-    { name: "Stone Grill Fried Rice", price: 200 }
-  ],
-  beef: [
-    { name: "Beef Steak", price: 300 },
-    { name: "Beef with Mushroom", price: 310 },
-    { name: "Beef Caldereta", price: 320 }
-  ],
-  fish: [
-    { name: "Fried Tilapia", price: 199 },
-    { name: "Grilled Bangus", price: 219 },
-    { name: "Sweet & Sour Fish", price: 229 }
-  ]
-};
+  <div id="floatingStatus" class="hidden">Sending...</div>
 
-let cart = [];
-let selectedItems = [];
-
-function togglePersons() {
-  const orderType = document.getElementById("orderType").value;
-  document.getElementById("personCount").style.display = (orderType === "Dine-in") ? "block" : "none";
-}
-
-function updateItems() {
-  const category = document.getElementById("category").value;
-  const itemDiv = document.getElementById("itemSelection");
-  itemDiv.innerHTML = "";
-  selectedItems = [];
-  if (menuItems[category]) {
-    menuItems[category].forEach((item, index) => {
-      const row = document.createElement("div");
-      row.className = "selectable-item";
-      row.innerHTML = `<span>${item.name} (₱${item.price})</span>`;
-      row.onclick = function () { toggleHighlight(row, category, index); };
-      itemDiv.appendChild(row);
-    });
-  }
-}
-
-function toggleHighlight(row, category, index) {
-  const key = category + '-' + index;
-  const selIndex = selectedItems.indexOf(key);
-  if (selIndex >= 0) {
-    selectedItems.splice(selIndex, 1);
-    row.classList.remove("selected");
-  } else {
-    selectedItems.push(key);
-    row.classList.add("selected");
-  }
-}
-
-document.getElementById("addSelectedBtn").onclick = function () {
-  selectedItems.forEach(key => {
-    const [cat, idx] = key.split('-');
-    const item = menuItems[cat][parseInt(idx)];
-    const existing = cart.find(ci => ci.name === item.name);
-    if (existing) existing.qty++;
-    else cart.push({ ...item, qty: 1 });
-  });
-  selectedItems = [];
-  document.querySelectorAll('.selectable-item').forEach(row => row.classList.remove("selected"));
-  renderCart();
-};
-
-function removeFromCart(idx) {
-  cart.splice(idx, 1);
-  renderCart();
-}
-
-function renderCart() {
-  const cartDiv = document.getElementById("cartItems");
-  cartDiv.innerHTML = "";
-  let total = 0;
-  if (cart.length === 0) {
-    cartDiv.innerHTML = "<em>No items yet.</em>";
-  } else {
-    cart.forEach((item, idx) => {
-      total += item.qty * item.price;
-      const row = document.createElement("div");
-      row.className = "cart-row";
-      row.innerHTML = `
-        <button type="button" class="delete-btn" onclick="removeFromCart(${idx})">🗑️</button>
-        <span>[${item.qty}] ${item.name}</span>
-        <span>₱${item.price * item.qty}</span>
-      `;
-      cartDiv.appendChild(row);
-    });
-  }
-  document.getElementById("dropdownTotal").textContent = total;
-}
-
-// SUBMIT LOGIC
-
-const form = document.getElementById("fullOrderForm");
-form.addEventListener("submit", function (e) {
+document.getElementById("fullOrderForm").addEventListener("submit", function(e) {
   e.preventDefault();
-  if (cart.length === 0) return alert("Add at least one item.");
+
+  if (cart.length === 0) {
+    alert("Please select at least one menu item.");
+    return;
+  }
 
   const data = {
-    name: form.name.value,
-    mobile: form.mobile.value,
-    orderType: form.orderType.value,
-    persons: form.persons.value || '',
-    datetime: form.datetime.value,
-    requests: form.requests.value,
+    name: document.getElementById("name").value,
+    mobile: document.getElementById("mobile").value.replace(/^0/, '+63'),  // fix mobile format
+    orderType: document.getElementById("orderType").value,
+    persons: document.getElementById("persons").value || "",
+    datetime: document.getElementById("datetime").value,
+    requests: document.getElementById("requests").value,
     cart: JSON.stringify(cart),
     total: document.getElementById("dropdownTotal").textContent
   };
 
-  const message = `🧾 *New Order Received*\nName: ${data.name}\nMobile: ${data.mobile}\nOrder: ${data.orderType}${data.persons ? `\nPAX: ${data.persons}` : ''}\nTime: ${data.datetime}\nItems: ${cart.map(i => `${i.name} ×${i.qty}`).join(", ")}\nTotal: ₱${data.total}\nNotes: ${data.requests}`;
+  const message = `🍽️ *New Order Received!*\n👤 Name: ${data.name}\n📱 Mobile: ${data.mobile}\n📦 Type: ${data.orderType}\n👥 Pax: ${data.persons}\n📅 When: ${data.datetime}\n🛒 Items: ${cart.map(i => `\n• ${i.name} x${i.qty}`).join('')}\n💰 Total: ₱${data.total}\n✍️ Notes: ${data.requests}`;
 
-  // 1. Send to Telegram
-  fetch("https://api.telegram.org/bot7538084446:AAEEBLr2U1YRhKhSyrN-HWf4mnPfjhtXgUqY/sendMessage", {
+  // Show sending message
+  document.getElementById("orderSummary").classList.remove("hidden");
+  document.getElementById("summaryText").innerHTML = `<div style="color:#999;">⏳ Sending your order... please wait.</div>`;
+
+  // Send to Telegram first
+  fetch("https://api.telegram.org/bot7538084446:AAEEBLr2U1YRhKhSyrNHWf4mnPfjhtXgUqY/sendMessage", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ chat_id: "-1002531095369", text: message, parse_mode: "Markdown" })
-  })
-    .then(r => r.json())
-    .then(res => {
-      if (res.ok) {
-        // 2. Then send to Google Sheets
-        fetch("https://script.google.com/macros/s/AKfycbyKlYNy78JDPvS_Dl65sHT24T5FE33XBWB-uo3rrafz3aCP5RuihGnJgeoq-NRc46iwsA/exec", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(data)
-        }).then(() => {
-          document.getElementById("summaryText").innerHTML = `<h3>✅ Order received and confirmed by our staff.</h3><p>Thank you, ${data.name}. Your order is being processed. Please explore our site while you wait.</p>`;
-          document.getElementById("orderSummary").classList.remove("hidden");
-          form.style.display = "none";
-          cart = [];
-          renderCart();
-        });
-      } else {
-        document.getElementById("summaryText").innerHTML = `<h3 style="color:red;">❌ Failed to send your order.</h3><p>Please try again later or contact us.</p>`;
-        document.getElementById("orderSummary").classList.remove("hidden");
-      }
+    body: JSON.stringify({
+      chat_id: "-1002531095369",
+      text: message,
+      parse_mode: "Markdown"
     })
-    .catch(() => {
-      document.getElementById("summaryText").innerHTML = `<h3 style="color:red;">❌ Unable to send your order.</h3><p>Please check your internet connection.</p>`;
-      document.getElementById("orderSummary").classList.remove("hidden");
-    });
-});
+  })
+  .then(r => r.json())
+  .then(res => {
+    if (res.ok) {
+      // If Telegram worked, send to Google Sheets
+      return fetch("https://script.google.com/macros/s/1IUPNsqjOgW9YamwN0yQXzFH9PncU_ZBVF9jjkAlQ9nVvr1C9Eb0ryIN4/exec", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(data)
+      });
+    } else {
+      throw new Error("Telegram failed");
+    }
+  })
+  .then(sheetRes => sheetRes.text())
+  .then(result => {
+    if (result.trim() === "OK") {
+      // Success! Show confirmation
+      document.getElementById("fullOrderForm").style.display = "none";
+      let summary = `<h2>✅ Order Sent Successfully!</h2>`;
+      summary += "<strong>Details:</strong><ul>";
+      cart.forEach(item => {
+        summary += `<li>${item.name} x${item.qty} - ₱${item.price * item.qty}</li>`;
+      });
+      summary += `</ul><strong>Total:</strong> ₱${data.total}`;
+      summary += `<p style="color:#b22222; margin-top:10px;">Your order has been submitted and received by our staff. Please wait while we process it.</p>`;
+      document.getElementById("summaryText").innerHTML = summary;
 
-renderCart();
-</script>
-  <div id="floatingStatus" class="hidden">Sending...</div>
+      cart = [];
+      renderCart();
+    } else {
+      throw new Error("Sheets saving failed");
+    }
+  })
+  .catch(err => {
+    document.getElementById("summaryText").innerHTML = `<h2 style="color:red;">❌ Order Failed</h2><p>${err.message}</p><p>Please try again or contact our staff.</p>`;
+  });
+});
 </body>
 </html>
