--- a/order/index.html
+++ b/order/index.html
@@ -10,19 +10,48 @@
 <body>
   <div class="container">
     <h1 style="text-align:center;">Stone Grill Order Form</h1>
-    <form id="orderForm">
+    <form id="fullOrderForm">
       <label for="name">Full Name:</label>
-      <input type="text" id="name" required />
+      <input type="text" id="name" name="name" required />
       <label for="mobile">Mobile Number:</label>
-      <input type="tel" id="mobile" required />
-      <label for="requests">Special Requests:</label>
-      <textarea id="requests" rows="3"></textarea>
+      <input type="tel" id="mobile" name="mobile" required />
+      <label for="orderType">Order Type:</label>
+      <select id="orderType" name="orderType" onchange="togglePersons()" required>
+        <option value="">-- Select --</option>
+        <option value="Dine-in">Dine-in</option>
+        <option value="Take-out">Take-out</option>
+      </select>
+      <div id="personCount" style="display:none;">
+        <label for="persons">Number of Persons:</label>
+        <input type="number" id="persons" name="persons" min="1" />
+      </div>
+      <label for="datetime">DATE & TIME:</label>
+      <input type="datetime-local" id="datetime" name="datetime" required />
+      <label for="category">Select MENU:</label>
+      <select id="category" onchange="updateItems()" required>
+        <option value="">-- CHOOSE MENU --</option>
+        <option value="pork">PORK</option>
+        <option value="chicken">CHICKEN</option>
+        <option value="vegetable">VEGETABLES</option>
+        <option value="noodles">NOODLES</option>
+        <option value="rice">RICE</option>
+        <option value="beef">BEEF</option>
+        <option value="fish">FISH</option>
+      </select>
+      <div id="itemSelection" style="margin-top: 20px;"></div>
+      <button type="button" id="addSelectedBtn" style="margin-bottom:10px;">Add Selected</button>
+      <h3>Ordered Items:</h3>
       <div id="cartItems"></div>
-      <div class="cart-total">Total: ₱<span id="total">0</span></div>
-      <button type="submit">Submit Order</button>
+      <div class="cart-total">Total: ₱<span id="dropdownTotal">0</span></div>
+      <label for="requests">Special Requests:</label>
+      <textarea id="requests" name="requests" rows="3" style="width:100%;"></textarea>
+      <button type="submit" style="margin-top: 10px;">Submit Order</button>
     </form>
-    <div id="summary" class="hidden">
+    <div id="orderSummary" class="hidden">
       <div id="summaryText"></div>
+      <div style="margin-top: 30px;">
+        <a href="/" style="color:#b22222;text-decoration:underline;font-weight:bold;">Back to Stone Grill Homepage</a>
+      </div>
     </div>
   </div>
   <script src="main.js"></script>
