--- a/order/index.html
+++ b/order/index.html
@@ -1,1 +1,46 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Stone Grill - Online Order</title>
+  <meta name="description" content="Order food online from Stone Grill Restaurant.">
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+    <h1 style="text-align:center;">Stone Grill Order Form</h1>
+    <form id="fullOrderForm">
+      <label for="name">Full Name:</label>
+      <input type="text" id="name" required />
+      <label for="mobile">Mobile Number (+63):</label>
+      <input type="tel" id="mobile" placeholder="+63..." required />
+      <label for="orderType">Order Type:</label>
+      <select id="orderType" required>
+        <option value="">-- Select --</option>
+        <option value="Dine-in">Dine-in</option>
+        <option value="Take-out">Take-out</option>
+      </select>
+      <label for="persons">Number of Persons (if Dine-in):</label>
+      <input type="number" id="persons" />
+      <label for="datetime">Date & Time:</label>
+      <input type="datetime-local" id="datetime" required />
+      <label for="requests">Special Requests:</label>
+      <textarea id="requests" rows="3"></textarea>
+      <div class="cart-section">
+        <h3>Menu</h3>
+        <div class="item" data-name="Pinakbet" data-price="149">Pinakbet - ₱149</div>
+        <div class="item" data-name="Bam-i" data-price="149">Bam-i - ₱149</div>
+        <button type="button" id="addBtn">Add Selected</button>
+        <div id="cartItems"></div>
+        <div class="cart-total">Total: ₱<span id="dropdownTotal">0</span></div>
+      </div>
+      <button type="submit">Submit Order</button>
+    </form>
+    <div id="summary" class="hidden">
+      <div id="summaryText"></div>
+    </div>
+  </div>
+  <script src="main.js"></script>
+</body>
+</html>
