--- a/order/index.html
+++ b/order/index.html
@@ -2,62 +2,70 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Stone Grill - Order Form</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Stone Grill - Online Order</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>Stone Grill Order Form</h1>
+    <h1>Stone Grill Online Order</h1>
     <form id="orderForm">
-      <label for="name">Full Name:</label>
-      <input type="text" id="name" required />
+      <div class="section">
+        <label>Full Name:</label>
+        <input type="text" id="name" required />
 
-      <label for="mobile">Mobile Number (+63):</label>
-      <input type="tel" id="mobile" placeholder="+63" required />
+        <label>Mobile (+63):</label>
+        <input type="tel" id="mobile" required placeholder="+63..." />
 
-      <label for="orderType">Order Type:</label>
-      <select id="orderType" required onchange="togglePersons()">
-        <option value="">-- Select --</option>
-        <option value="Dine-in">Dine-in</option>
-        <option value="Take-out">Take-out</option>
-      </select>
+        <label>Order Type:</label>
+        <select id="orderType" required onchange="togglePersons()">
+          <option value="">-- Select --</option>
+          <option value="Dine-in">Dine-in</option>
+          <option value="Take-out">Take-out</option>
+        </select>
 
-      <div id="personsField" class="hidden">
-        <label for="persons">Number of Persons:</label>
-        <input type="number" id="persons" min="1" />
+        <div id="personCount" style="display:none">
+          <label>Number of Persons:</label>
+          <input type="number" id="persons" min="1" />
+        </div>
+
+        <label>Date & Time:</label>
+        <input type="datetime-local" id="datetime" required />
+
+        <label>Special Requests:</label>
+        <textarea id="requests" rows="3"></textarea>
       </div>
 
-      <label for="datetime">Date & Time:</label>
-      <input type="datetime-local" id="datetime" required />
+      <div class="section">
+        <label>Select Menu Category:</label>
+        <select id="category" onchange="updateItems()" required>
+          <option value="">-- Choose Category --</option>
+          <option value="pork">Pork</option>
+          <option value="chicken">Chicken</option>
+          <option value="vegetable">Vegetable</option>
+          <option value="noodles">Noodles</option>
+          <option value="rice">Rice</option>
+          <option value="beef">Beef</option>
+          <option value="fish">Fish</option>
+        </select>
 
-      <label for="requests">Special Requests:</label>
-      <textarea id="requests"></textarea>
-
-      <div class="menu">
-        <h3>Select Items:</h3>
-        <div class="item">
-          <span>Pork Sisig</span>
-          <input type="number" data-price="180" min="0" value="0" />
-        </div>
-        <div class="item">
-          <span>Calamari</span>
-          <input type="number" data-price="200" min="0" value="0" />
-        </div>
-        <div class="item">
-          <span>Crispy Pata</span>
-          <input type="number" data-price="480" min="0" value="0" />
-        </div>
+        <div id="itemSelection"></div>
+        <button type="button" id="addSelectedBtn">Add Selected Items</button>
       </div>
 
-      <div class="cart-total">Total: ₱<span id="total">0</span></div>
-
-      <button type="submit">Submit Order</button>
+      <div class="section">
+        <h3>Ordered Items</h3>
+        <div id="cartItems"></div>
+        <div class="cart-total">Total: ₱<span id="dropdownTotal">0</span></div>
+        <button type="submit">Submit Order</button>
+      </div>
     </form>
+
     <div id="summary" class="hidden">
       <div id="summaryText"></div>
     </div>
   </div>
+
   <script src="main.js"></script>
 </body>
 </html>
