--- a/order/index.html
+++ b/order/index.html
@@ -66,6 +66,19 @@
     </div>
   </div>
 
+  <script>
+  const mobileInput = document.getElementById("mobile");
+  mobileInput.addEventListener("input", function () {
+    let val = mobileInput.value;
+    if (val.length > 1 && val.startsWith("0")) {
+      val = "+63" + val.slice(1);
+      mobileInput.value = val;
+    }
+    if (val.includes("++")) {
+      mobileInput.value = val.replace("++", "+");
+    }
+  });
+</script>
   <script src="main.js"></script>
 </body>
 </html>
