--- a/order/index.html
+++ b/order/index.html
@@ -9,12 +9,14 @@
 <body>
   <div class="container">
     <h1>Stone Grill Online Order</h1>
+
+    <!-- Customer Info Section -->
     <form id="orderForm">
-      <div class="section">
+      <div class="section customer-section">
         <label>Full Name:</label>
         <input type="text" id="name" required />
 
-        <label>Mobile (+63):</label>
+        <label>Mobile Number (+63):</label>
         <input type="tel" id="mobile" required placeholder="+63..." />
 
         <label>Order Type:</label>
@@ -31,12 +33,10 @@
 
         <label>Date & Time:</label>
         <input type="datetime-local" id="datetime" required />
-
-        <label>Special Requests:</label>
-        <textarea id="requests" rows="3"></textarea>
       </div>
 
-      <div class="section">
+      <!-- Menu Selection Section -->
+      <div class="section menu-section">
         <label>Select Menu Category:</label>
         <select id="category" onchange="updateItems()" required>
           <option value="">-- Choose Category --</option>
@@ -53,32 +53,26 @@
         <button type="button" id="addSelectedBtn">Add Selected Items</button>
       </div>
 
-      <div class="section">
+      <!-- Ordered Items Section -->
+      <div class="section order-summary">
         <h3>Ordered Items</h3>
         <div id="cartItems"></div>
+        <label>Special Requests:</label>
+        <textarea id="requests" rows="2"></textarea>
         <div class="cart-total">Total: ₱<span id="dropdownTotal">0</span></div>
         <button type="submit">Submit Order</button>
       </div>
     </form>
 
+    <!-- Confirmation Summary -->
     <div id="summary" class="hidden">
       <div id="summaryText"></div>
     </div>
+
+    <!-- Floating Message -->
+    <div id="floatingMessage" class="hidden"></div>
   </div>
 
-  <script>
-  const mobileInput = document.getElementById("mobile");
-  mobileInput.addEventListener("input", function () {
-    let val = mobileInput.value;
-    if (val.length > 1 && val.startsWith("0")) {
-      val = "+63" + val.slice(1);
-      mobileInput.value = val;
-    }
-    if (val.includes("++")) {
-      mobileInput.value = val.replace("++", "+");
-    }
-  });
-</script>
   <script src="main.js"></script>
 </body>
 </html>
