Update index new

--- a/order/index.html
+++ b/order/index.html
@@ -3,17 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Stone Grill Order</title>
+  <title>Stone Grill | Online Reservation</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Stone Grill Online Order</h1>
 
-    <!-- Customer Info -->
-    <div class="card">
-      <h2>Customer Information</h2>
-      <form id="orderForm">
+  <!-- 🔰 Header with Logo -->
+  <header class="header">
+    <img src="assets/IMG_0155.png" alt="Stone Grill Logo" class="logo" />
+    <h1 class="title">Online Reservation</h1>
+  </header>
+
+  <!-- 📦 Container -->
+  <div class="container">
+
+    <!-- 📋 Full Form -->
+    <form id="orderForm">
+
+      <!-- 🧍 Customer Info -->
+      <div class="card">
+        <h4>Please Fill in All Details Below to Complete Your Order Successfully</h4>
         <input type="text" id="name" required placeholder="Full Name" />
         <input type="tel" id="mobile" placeholder="e.g. 09171234567" required />
         <label>Date & Time:</label>
@@ -27,35 +36,41 @@
           <label>Number of Persons:</label>
           <input type="number" id="persons" min="1" />
         </div>
-      </form>
-    </div>
-
-    <!-- Category Selector -->
-    <div class="card">
-      <button type="button" onclick="openCategoryPopup()" class="category-btn">🍽 Select Category</button>
-      <div id="cartItems"></div>
-      <div class="cart-total">Total: ₱<span id="dropdownTotal">0</span></div>
-    </div>
-
-    <!-- Floating Category Popup -->
-    <div id="categoryPopup" class="hidden">
-      <div class="popup-header">
-        <h3 id="popupTitle">Select Category</h3>
-        <button class="close-btn" onclick="closePopup()">×</button>
       </div>
-      <div id="popupItems"></div>
-      <button onclick="addSelectedItems()" class="add-selected-btn">Add Selected Item</button>
-    </div>
 
-    <!-- Special Request + Submit -->
-    <div class="card">
-      <h4>Special Request</h4>
-      <textarea id="requests" rows="2" placeholder="Less spicy, Add extra sauce..."></textarea>
-      <button type="submit" form="orderForm">Submit Order</button>
-    </div>
+      <!-- 🍽 Ordering Section -->
+      <div class="card">
+        <button type="button" onclick="openCategoryPopup()" class="category-btn">🍽 Select Category</button>
 
-    <!-- Floating Messages -->
-    <div id="floatingMessage" class="hidden">Sending...</div>
-    <script src="main.js"></script>
+        <div id="cartItems" style="margin-top: 15px;"></div>
+
+        <label for="requests" style="margin-top: 20px; display: block;">📝 Special Requests:</label>
+        <textarea id="requests" placeholder="Any special instructions..." rows="3"
+          style="width: 100%; border-radius: 8px; padding: 10px;"></textarea>
+      </div>
+
+      <!-- ✅ Submit Button -->
+      <div style="text-align: center; margin-top: 16px;">
+        <button type="submit" class="submit-btn">📤 Submit Order</button>
+      </div>
+
+    </form>
+  </div>
+
+  <!-- 🧾 Floating Category Popup -->
+  <div id="popupOverlay" class="hidden"></div>
+  <div id="categoryPopup" class="hidden">
+    <div class="popup-header">
+      <h3 id="popupTitle">Select Category</h3>
+      <button class="close-btn" onclick="closePopup()">×</button>
+    </div>
+    <div id="popupItems"></div>
+  </div>
+
+  <!-- 🔔 Floating message (for order added) -->
+  <div id="floatingMessage" class="hidden">Sending...</div>
+
+  <!-- ✅ Main Script -->
+  <script src="main.js"></script>
 </body>
 </html>
