Update index mob
index mobile seo

--- a/order/index.html
+++ b/order/index.html
@@ -5,13 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Stone Grill | Online Reservation</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Primary SEO -->
+<title>Stone Grill Online Order & Reservation | Bato, Leyte</title>
+<meta name="description" content="Reserve your table or order delicious sizzling meals online from Stone Grill Restaurant. Quick, easy, and relaxing dining experience in Bato, Leyte." />
+<meta name="keywords" content="Stone Grill, online reservation, restaurant Bato Leyte, sizzling meals, dine-in, take-out, seafood, boodle, Filipino food" />
+<meta name="author" content="Stone Grill Restaurant" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="Order Online or Reserve a Table at Stone Grill!" />
+<meta property="og:description" content="Enjoy delicious meals and Filipino favorites. Book now or order take-out at your convenience." />
+<meta property="og:image" content="https://stonegrillresto.net/assets/img/og-order.jpg" />
+<meta property="og:url" content="https://stonegrillresto.net/order/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter (optional but helpful) -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Stone Grill Online Order & Reservation" />
+<meta name="twitter:description" content="Book your table or order sizzling meals online. Quick, easy, and hassle-free!" />
+<meta name="twitter:image" content="https://stonegrillresto.net/assets/IMG_6347.jpeg" />
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://stonegrillresto.net/order/" />
 </head>
 <body>
 
   <!-- 🔰 Header with Logo -->
   <header class="header">
     <img src="assets/IMG_0155.png" alt="Stone Grill Logo" class="logo" />
-    <h1 class="title">Online Reservation</h1>
+    <h2 class="title">Online Reservation</h2>
   </header>
 
   <!-- 📦 Container -->
