--- a/order/index.html
+++ b/order/index.html
@@ -14,7 +14,7 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:title" content="Order Online or Reserve a Table at Stone Grill!" />
 <meta property="og:description" content="Enjoy delicious meals and Filipino favorites. Book now or order take-out at your convenience." />
-<meta property="og:image" content="https://stonegrillresto.net/assets/img/og-order.jpg" />
+<meta property="og:image" content="https://stonegrillresto.net/assets/IMG_6347.jpeg" />
 <meta property="og:url" content="https://stonegrillresto.net/order/" />
 <meta property="og:type" content="website" />
 
