--- a/order/index.html
+++ b/order/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Stone Grill | Online Reservation</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="manifest" href="/manifest.json" />
+<meta name="theme-color" content="#BA1313" />
+
+<!-- iOS Support -->
+<link rel="apple-touch-icon" href="/assets/icons/icon-192.png" />
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
 
