--- a/order/index.html
+++ b/order/index.html
@@ -13,6 +13,14 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
+  <section class="hero">
+  <div class="hero-content">
+    <img src="assets/IMG_0155.png" alt="Stone Grill Logo" class="hero-logo" />
+    <h1>Welcome to Stone Grill</h1>
+    <p>Order online. Dine-in or take-out. Easy, fast, and relaxing.</p>
+    <a href="#orderForm" class="hero-btn">Start Your Order</a>
+  </div>
+</section>
 <body>
 
   <!-- 🔰 Header with Logo -->
