--- a/order/index.html
+++ b/order/index.html
@@ -14,7 +14,8 @@
   <link rel="icon" href="assets/icons/favicon-32.png" sizes="32x32">
   <link rel="apple-touch-icon" href="assets/icons/apple-touch-180.png">
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
+
 
   <!-- Open Graph (only affects link previews; page still works if missing) -->
   <meta property="og:title" content="Stone Grill — Online Order">
